# ME5413_group2

./: .gitignore  README.md  Robotgrip_set_orange.stl  finger_holder_b.stl
src/jackal_description/urdf/: accessories.urdf.xacro  jackal.urdf.xacro
src/me5413_navigation/: CMakeLists.txt  package.xml
src/me5413_navigation/config/: ekf_config.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  patrol_params.yaml  teb_local_planner_params.yaml
src/me5413_navigation/launch/: amcl.launch  move_base.launch  patrol_navigation.launch  respawn_objects.launch  slope_mode_controller.launch
src/me5413_navigation/scripts/: patrol_waypoints.py  respawn_objects_once.py  slope_mode_controller.py  test_pitch.py
src/me5413_world/: CMakeLists.txt
src/me5413_world/launch/: box_counter_perception.launch  cartographer_2d_IMU_ODOM_LI.launch  manual.launch  navigation.launch  perception.launch  world.launch
src/me5413_world/map_config/: cartographer_2d_1  cartographer_2d_2  cartographer_2d_3  cartographer_2d_IMU_ODOM_LI.lua  cartographer_2d_success_1  cartographer_2d_success_try  rtabmap_slope_common.yaml
src/me5413_world/maps/: 1st_floor.pgm  1st_floor.yaml  2nd_floor.pgm  2nd_floor.yaml  floor1.pgm  floor1.yaml  slope.pgm  slope.yaml  world_map.pgm  world_map.yaml  world_map_aft_b_2.pgm  world_map_aft_b_2.yaml  world_map_t1.pgm  world_map_t1.yaml
src/me5413_world/records/: box_counts.yaml
src/me5413_world/rviz/: manual.rviz  (+1 more)
src/teleop_twist_keyboard/: CMakeLists.txt  package.xml
src/teleop_twist_keyboard/scripts/: mbot_teleop.py
(+9 files in other folders)
