<?xml version="1.0"?>
<package format="2">
  <name>teleop_twist_keyboard</name>
  <version>0.0.0</version>
  <description>Keyboard teleop node</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
